Fixed layout jump in language slideshow

--- a/assets/info/css/info.scss
+++ b/assets/info/css/info.scss
@@ -29,6 +29,7 @@ div.language-list {
 }
 
 .slideshow-status {
+	display: none;
 	cursor: pointer;
 	font-size: 95%;
 	font-style: italic;
